fixed spacing issue for products cards

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -21,8 +21,8 @@ a{
     letter-spacing:3px; 
 }
 .logo{
-    height:30px;
-    width: 30px;
+    max-width: 40px;
+    margin-left: 30px;
 }
 
 
